--- a/index.html
+++ b/index.html
@@ -4,55 +4,83 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Change your WEBSITE TITLE HERE-->
-    <title>Edward's template</title>
+    <title>Qiyuan Zhou's website</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="main.css" />
     <!-- <script src="index.js"></script> -->
 </head>
-    <body>
-        <div class="text-intro">
-            <div class="intro">
-                <!-- Here's the Big title and the subtitle on the left on the main page -->
-                <h1>XXX's Island</h1>
-                <h2>Type your subtitle here</h2>
-            </div>
-            <div class="author">
-                <!-- Here's some basic information, you can add more <p></p> or delete any from below -->
-                <h3>Author: XXX</h3>
-                <p>I love python</p>
-                <p>I love econometrics</p>
-                <p>I love C++</p>
-            </div>
+<body>
+    <div class="text-intro">
+        <div class="intro">
+            <!-- Here's the Big title and the subtitle on the left on the main page -->
+            <h1>Qiyuan Zhou's Website</h1>
+            <h2>Welcome to my website!</h2>
         </div>
-        <div class="container">
-
-            <!-- Here's the cards on the right. You can add more cards with copy-paste the whole <div class="card"></div> block -->
-            <div class="card">
-                <div class="content">
-                    <h2></h2>
-                    <!-- The title on the card.-->
-                    <h3>Data Science</h3>
-                    <div class="hov">
-                        <!-- The subtitle -->
-                        <p>Professional experiences and research experiences of data science</p>
-                        <!-- Link to the subpage-->
-                        <a href="./pages/ds_page/index.html">Read More</a>
-                    </div>
+        <div class="author">
+            <!-- Here's some basic information, you can add more <p></p> or delete any from below -->
+            <h3>Author: Qiyuan Zhou</h3>
+            <p><strong>I love coding</strong></p>
+            <p><strong>I love traveling</strong></p>
+            <p><strong>I love new things</strong></p>
+        </div>
+        <!-- Contact Section -->
+        <div class="contact">
+            <div class="icons">
+                <a href="https://github.com/zhouaad" target="_blank">
+                    <img src="dict/images/github-mark.png" alt="GitHub" width="28" height="28">
+                </a>
+                <a href="https://linkedin.com/in/qiyuan-zhou" target="_blank">
+                    <img src="dict/images/LI-In-Bug.png" alt="LinkedIn" width="30" height="24">
+                </a>
+        </div>
+    </div>
+    </div>
+    <div class="container">
+        <!-- Here's the cards on the right. You can add more cards with copy-paste the whole <div class="card"></div> block -->
+        
+        <div class="card">
+            <div class="content">
+                <h2></h2>
+                <h3>Education</h3>
+                <div class="hov">
+                    <p>A journey through my academic achievements</p>
+                    <!-- Link to the subpage-->
+                    <a href="./pages/education/index.html">Read More</a>
                 </div>
             </div>
-
-            <div class="card">
-                <div class="content">
-                    <h2></h2>
-                    <h3>Game Design</h3>
-                    <div class="hov">
-                        <p>Professional experiences in game industry</p>
-                        <!-- Link to the subpage-->
-                        <a href="./pages/game_page/index.html">Read More</a>
-                    </div>
+        </div>
+        
+        <div class="card">
+            <div class="content">
+                <h2></h2>
+                <!-- The title on the card.-->
+                <h3>Internship & Notable Projects</h3>
+                <div class="hov">
+                    <!-- The subtitle -->
+                    <p>Exploring my data science experience</p>
+                    <!-- Link to the subpage-->
+                    <a href="./pages/ds_page/index.html">Read More</a>
                 </div>
             </div>
-
         </div>
-    </body>
+
+        <!-- <div class="card">
+            <div class="content">
+                <h2></h2>
+                <h3>Personal Interests</h3>
+                <div class="hov">
+                    <p>See what I do in my spare time!</p> -->
+                    <!-- Link to the subpage-->
+                    <!-- <a href="./pages/personal_interests/index.html">Read More</a>
+                </div>
+            </div>
+        </div> -->
+    </div>
+
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 Qiyuan Zhou. All Rights Reserved.</p>
+    </footer>
+</body>
 </html>
