change img path

--- a/pages/ds_page/index.html
+++ b/pages/ds_page/index.html
@@ -102,6 +102,7 @@
                         <h1>
                             Exploratory Analysis and Predictive Modeling for ECG and PPG Human Heart Activity Data
                         </h1>
+                        <h2>Spring 2023</h2>
                         <h2>
                             <a href="https://www.bc.edu/content/dam/bc1/schools/mcas/cs/pdf/honors-thesis/2023/Qiyuan-Zhou_Honors-Thesis.pdf" target="_blank"><span style="font-weight: bold; font-size:larger">Paper Link</span></a>
                         </h2>
